--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
-    "@types/node": "^18.8.5"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.5",
+    "@types/xml2js": "^0.4.11"
   }
 }
